fix: zarf values file

--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -66,6 +66,8 @@ components:
         namespace: leapfrogai
         localPath: chart
         version: '###ZARF_PKG_TMPL_IMAGE_VERSION###'
+        valuesFiles:
+          - "chart/values.yaml"
     images:
       - '###ZARF_PKG_TMPL_IMAGE_REPOSITORY###:###ZARF_PKG_TMPL_IMAGE_VERSION###'
     actions:
