fix: supabase url 2

--- a/uds-bundles/dev/gpu/uds-config.yaml
+++ b/uds-bundles/dev/gpu/uds-config.yaml
@@ -25,5 +25,5 @@ variables:
   lfaiui:
     domain: https://lfaiui.uds.dev
     model: vllm
-    supabase_url: http://supabase-kong.leapfrogai.svc.cluster.local:8080
+    supabase_url: https://supabase-kong.uds.dev
     supabase_anon_key: ''
