--- a/packages/ui/zarf.yaml
+++ b/packages/ui/zarf.yaml
@@ -45,7 +45,7 @@ variables:
   - name: SUPABASE_URL
     description: URL for supabase
     prompt: true
-    default: http://supabase-kong.leapfrogai.svc.cluster.local:8080
+    default: https://supabase-kong.uds.dev
     sensitive: false
   - name: SUPABASE_ANON_KEY
     default: ''
