remove supabase-jwt secret (for now)

--- a/packages/api/chart/templates/api/deployment.yaml
+++ b/packages/api/chart/templates/api/deployment.yaml
@@ -47,11 +47,11 @@ spec:
             value: "{{ .Values.api.port }}"
           - name: SUPABASE_URL
             value: "{{ .Values.package.supabase_url }}"
-          - name: SUPABASE_KEY
-            valueFrom:
-              secretKeyRef:
-                name: supabase-jwt
-                key: anon-key
+          # - name: SUPABASE_KEY
+          #   valueFrom:
+          #     secretKeyRef:
+          #       name: supabase-jwt
+          #       key: anon-key
           ports:
             - containerPort: 8080
           livenessProbe:
