--- a/uds-bundles/latest/gpu/uds-bundle.yaml
+++ b/uds-bundles/latest/gpu/uds-bundle.yaml
@@ -30,7 +30,12 @@ packages:
     repository: ghcr.io/defenseunicorns/packages/leapfrogai/whisper
     ref: 0.6.1
 
-  # UI
+  # Legacy: AI chat, transcription, and summarization frontend
   - name: leapfrogai-ui
-    path: ghcr.io/defenseunicorns/leapfrogai/leapfrogai-ui
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/leapfrogai-ui
     ref: 0.3.5
+
+  # UI - new UI TODO - point to ghcr image after Sprint 0.7.0
+  - name: lfaiui
+    path: ../../../packages/ui/
+    ref: dev
