--- a/.github/workflows/ui-test.yaml
+++ b/.github/workflows/ui-test.yaml
@@ -29,7 +29,7 @@ jobs:
           node-version: 18
 
       - name: Install Dependencies
-        run: npm install
+        run: npm --prefix src/leapfrogai_ui install
 
       - name: Run Unit Tests
-        run: npm run test:unit
+        run: npm --prefix src/leapfrogai_ui run test:unit
