now with more shim

--- a/.github/workflows/pytest-shim.yaml
+++ b/.github/workflows/pytest-shim.yaml
@@ -3,9 +3,10 @@ name: pytest Skip Shim
 on:
   pull_request:
     paths:
-      # Catch updates to the .github directory, unless it is the e2e.yaml files
+      # Catch updates to the .github directory, unless it is the pytest related files
       - ".github/**"
       - "!.github/workflows/pytest.yaml"
+      - "!.github/workflows/pytest-shim.yaml"
 
       # Catch docs and website things
       - "**.md"
