--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -48,6 +48,7 @@ variables:
     default: "https://keycloak.admin.uds.dev/realms/uds"
   - name: EXISTING_POSTGRES_SECRET
     description: 'The name of the existing Postgres secret, if empty the Postgres chart will create a new secret'
+    prompt: true
     default: "supabase-postgresql"
 
 components:
