--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -3286,7 +3286,7 @@ postgresql:
   ##
   auth:
     postgresPassword: ""
-    existingSecret: "###ZARF_VAR_EXISTING_POSTGRES_SECRET###"
+    existingSecret: ""
   ## @param postgresql.architecture PostgreSQL architecture (`standalone` or `replication`)
   ##
   architecture: standalone
