--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -49,7 +49,7 @@ variables:
   - name: EXISTING_POSTGRES_SECRET
     description: 'The name of the existing Postgres secret, if empty the Postgres chart will create a new secret'
     prompt: true
-    default: "supabase-postgresql"
+    default: "supabase-postgresql-backup"
 
 components:
   - name: supabase-bootstrap
@@ -76,6 +76,14 @@ components:
         version: 4.0.1
         valuesFiles:
           - "bitnami-values.yaml"
+    actions:
+      onDeploy:
+        after:
+          - cmd: |
+              if ! kubectl get secret "supabase-postgresql-backup" -n "leapfrogai" &>/dev/null; then
+                  # If the Secret doesn't exist, copy the source Secret
+                  kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | kubectl apply --namespace="$NAMESPACE" -f -
+              fi
     images:
       - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
       - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r19
