--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -82,7 +82,7 @@ components:
           - cmd: |
               if ! kubectl get secret "supabase-postgresql-backup" -n "leapfrogai" &>/dev/null; then
                   # If the Secret doesn't exist, copy the source Secret
-                  kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | kubectl apply --namespace="$NAMESPACE" -f -
+                  kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | kubectl apply --namespace="leapfrogai" -f -
               fi
     images:
       - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
