--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -81,8 +81,13 @@ components:
         after:
           - cmd: |
               if ! kubectl get secret "supabase-postgresql-backup" -n "leapfrogai" &>/dev/null; then
-                  # If the Secret doesn't exist, copy the source Secret
-                  kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | kubectl apply --namespace="leapfrogai" -f -
+                  if kubectl get secret "supabase-postgresql" -n "leapfrogai" &>/dev/null; then
+                      kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | \
+                          sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | \
+                          kubectl apply --namespace="leapfrogai" -f -
+                  else
+                      exit 1
+                  fi
               fi
     images:
       - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
