--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -82,9 +82,7 @@ components:
           - cmd: |
               if ! kubectl get secret "supabase-postgresql-backup" -n "leapfrogai" &>/dev/null; then
                   if kubectl get secret "supabase-postgresql" -n "leapfrogai" &>/dev/null; then
-                      kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | \
-                          sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | \
-                          kubectl apply --namespace="leapfrogai" -f -
+                      kubectl get secret "supabase-postgresql" -n "leapfrogai" -o yaml | sed "s/name: supabase-postgresql/name: supabase-postgresql-backup/" | kubectl apply --namespace="leapfrogai" -f -
                   else
                       exit 0
                   fi
