add huggingface_hub in a few other places where it is used

--- a/packages/text-embeddings/pyproject.toml
+++ b/packages/text-embeddings/pyproject.toml
@@ -15,6 +15,11 @@ dependencies = [
 requires-python = "~=3.11"
 readme = "README.md"
 
+[project.optional-dependencies]
+dev = [
+    "huggingface_hub",
+]
+
 [tool.pip-tools]
 generate-hashes = true
 
