--- a/packages/vllm/pyproject.toml
+++ b/packages/vllm/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
 requires-python = "~=3.11"
 readme = "README.md"
 
+[project.optional-dependencies]
+dev = [
+    "huggingface_hub",
+]
 
 [tool.pip-tools]
 generate-hashes = true
