--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -79,6 +79,7 @@ components:
     actions:
       onDeploy:
         after:
+          - cmd: chmod +x postgres-persistence.sh
           - cmd: ./postgres-persistence.sh
     images:
       - docker.io/bitnami/gotrue:2.149.0-debian-12-r0
