--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -42,7 +42,7 @@ variables:
     default: "true"
   - name: EXTERNAL_KEYCLOAK_REDIRECT_URL
     description: 'Keycloaks redirect url'
-    default: "http://supabase-kong.leapfrogai.svc.cluster.local:80/auth/v1/callback"
+    default: "https://supabase-kong.uds.dev/auth/v1/callback"
   - name: EXTERNAL_KEYCLOAK_URL
     description: 'External keycloak url'
     default: "https://keycloak.admin.uds.dev/realms/uds"
@@ -50,6 +50,14 @@ variables:
     description: 'The name of the existing Postgres secret, if empty the Postgres chart will create a new secret'
     prompt: true
     default: "supabase-postgresql-backup"
+  - name: DASHBOARD_USERNAME
+    description: 'The dashboards default username'
+    prompt: true
+    default: "test"
+  - name: DASHBOARD_PASSWORD
+    description: 'The dashboards default password'
+    prompt: true
+    default: "test"
 
 components:
   - name: supabase-bootstrap
