--- a/packages/supabase/uds-package.yaml
+++ b/packages/supabase/uds-package.yaml
@@ -20,5 +20,5 @@ spec:
       - direction: Egress
         podLabels:
           app.kubernetes.io/name: supabase
-          app.kubernetes.io/component: studio
+          app.kubernetes.io/component: kong
         remoteGenerated: Anywhere
