--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,13 @@ repos:
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.56.0
     hooks:
-    -   id: eslint
-        files: \.[jt]sx?$  # *.js, *.jsx, *.ts and *.tsx
+      - id: eslint
+        files: \.(js|jsx|ts|tsx|svelte)$ # apply eslint to the provided filetypes
         types: [file]
+
+  # Prettier Code formatter
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: "v3.1.0"
+    hooks:
+      - id: prettier
+        files: \.(js|jsx|ts|tsx|svelte)$ # apply eslint to the provided filetypes
