--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,4 @@ repos:
     rev: "v3.1.0"
     hooks:
       - id: prettier
-        files: \.(js|jsx|ts|tsx|svelte)$ # apply eslint to the provided filetypes
+        files: \.(js|jsx|ts|tsx|svelte)$ # apply prettier to the provided filetypes
