Removes supabase metadata, fixes config

--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -2515,8 +2515,8 @@ studio:
     STUDIO_PG_META_URL: "http://{{ include "supabase.kong.fullname" . }}.{{ include "common.names.namespace" . }}.svc.{{ .Values.clusterDomain }}:{{ .Values.kong.service.ports.proxyHttp }}/pg"
     SUPABASE_PUBLIC_URL: {{ include "supabase.api.publicURL" . | quote }}
     PORT: {{ .Values.studio.containerPorts.http | quote }}
-    DASHBOARD_USERNAME=###ZARF_VAR_DASHBOARD_USERNAME###
-    DASHBOARD_PASSWORD=###ZARF_VAR_DASHBOARD_PASSWORD###
+    DASHBOARD_USERNAME: "###ZARF_VAR_DASHBOARD_USERNAME###"
+    DASHBOARD_PASSWORD: "###ZARF_VAR_DASHBOARD_PASSWORD###"
   ## @param studio.extraConfig Supabase studio extra configuration
   ##
   extraConfig: {}
