--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -6,6 +6,11 @@ metadata:
   description: >
     supabase instance and all of its dependencies
 
+constants:
+  - name: DASHBOARD_USERNAME
+    description: The dashboard's (Supabase studio) default username
+    value: supabase-admin
+
 variables:
   - name: ENABLE_AUTH
     description: 'Should the auth component be enabled'
@@ -50,15 +55,15 @@ variables:
     description: 'The name of the existing Postgres secret, if empty the Postgres chart will create a new secret'
     prompt: true
     default: "supabase-postgresql-backup"
-  - name: DASHBOARD_USERNAME
-    description: 'The dashboards default username'
-    prompt: true
-    default: "test"
   - name: DASHBOARD_PASSWORD
     description: 'The dashboards default password'
     prompt: true
     sensitive: true
     default: "test"
+  - name: REGENERATE_DASHBOARD_PASSWORD
+    description: 'The dashboards default password'
+    prompt: true
+    default: "true"
 
 components:
   - name: supabase-bootstrap
