Adds configmap values as kustomizations

--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -114,7 +114,7 @@ components:
           - "uds-package.yaml"
       - name: supabase-manifests
         namespace: leapfrogai
-        files:
+        kustomizations:
           - "manifests/declarative-conf-configmap.yaml"
     files:
       - source: scripts/postgres-persistence.sh
