convert prettier to eslint plugin

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -9,8 +9,8 @@
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write .",
+		"lint": "eslint .",
+		"format": "eslint . --fix",
 		"test:integration": "playwright test",
 		"test:integration:ui": "playwright test --ui",
 		"test:unit": "vitest run",
@@ -42,11 +42,10 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
+		"eslint-plugin-prettier": "5.0.0",
 		"husky": "^9.0.11",
 		"jsdom": "^24.0.0",
 		"otpauth": "^9.2.2",
-		"prettier": "^3.1.1",
-		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.71.1",
 		"svelte": "^4.2.12",
 		"svelte-check": "^3.6.9",
