--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,12 +27,10 @@ repos:
     rev: v8.56.0
     hooks:
       - id: eslint
-        files: \.(js|jsx|ts|tsx|svelte)$ # apply eslint to the provided filetypes
+        name: ESLint and Prettier
+        files: \.(js|jsx|ts|tsx|svelte|cjs|mjs)$ # *.js, *.jsx, *.ts, *.tsx and *.svelte
         types: [file]
-
-  # Prettier Code formatter
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: "v3.1.0"
-    hooks:
-      - id: prettier
-        files: \.(js|jsx|ts|tsx|svelte)$ # apply prettier to the provided filetypes
+        additional_dependencies:
+            - eslint@8.56.0
+            - eslint-plugin-prettier@5.0.0
+            - eslint-plugin-svelte@2.35.1
