--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -42,7 +42,7 @@
 		"eslint": "^8.56.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.35.1",
-		"eslint-plugin-prettier": "5.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
 		"husky": "^9.0.11",
 		"jsdom": "^24.0.0",
 		"otpauth": "^9.2.2",
