Replaces var with const uses merge configmap instead of gnerating

--- a/packages/supabase/kustomizations/kustomization.yaml
+++ b/packages/supabase/kustomizations/kustomization.yaml
@@ -1,4 +1,2 @@
-configMapGenerator:
-- name: supabase-kong-declarative-config
-  files:
-  - kong.yml.tpl
+resources:
+- declarative-conf-configmap.yaml
