--- a/packages/supabase/manifests/dashboard-secret.yaml
+++ b/packages/supabase/manifests/dashboard-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
+  name: supabase-dashboard-secret
 type: Opaque
 data:
   password: {{ $postgresPassword | b64enc | quote }}
