--- a/packages/supabase/kustomizations/kustomization.yaml
+++ b/packages/supabase/kustomizations/kustomization.yaml
@@ -3,3 +3,8 @@ resources:
 
 generatorOptions:
  disableNameSuffixHash: true
+
+secretGenerator:
+- name: supabase-dashboard-secret
+  literals:
+  - password=dummy
