--- a/packages/supabase/kustomizations/kustomize.yaml
+++ b/packages/supabase/kustomizations/kustomize.yaml
@@ -4,5 +4,6 @@ metadata:
   name: random-secret
 generate:
   - name: supabase-dashboard-secret
+    behavior: merge
     literals:
       - password=$(openssl rand -base64 32)
