Adds dummy secret for overwriting with random gen secret

--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -78,6 +78,10 @@ components:
         valuesFiles:
           - "bitnami-values-basic.yaml"
     manifests:
+      - name: dummy-secret-manifest
+        namespace: leapfrogai
+        files:
+          - "manifests/dummy-dashboard-secret.yaml"
       - name: secret-generator-manifests
         namespace: leapfrogai
         kustomizations:
