--- a/packages/supabase/kustomizations/kustomization.yaml
+++ b/packages/supabase/kustomizations/kustomization.yaml
@@ -1,5 +1,8 @@
-resources:
-- kustomize.yaml
-
 generatorOptions:
  disableNameSuffixHash: true
+
+secretGenerator:
+- name: supabase-dashboard-secret
+  literals:
+    - password=$(openssl rand -base64 32)
+  type: "Opaque"
