--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -89,6 +89,9 @@ components:
         localPath: chart/
         releaseName: supabase
         version: 4.0.1
+    images:
+      - docker.io/bitnami/jwt-cli:6.0.0-debian-12-r19
+      - docker.io/bitnami/kubectl:1.29.3-debian-12-r4
   - name: supabase
     required: true
     charts:
