--- a/packages/supabase/bitnami-values.yaml
+++ b/packages/supabase/bitnami-values.yaml
@@ -24,7 +24,7 @@ global:
   jwt:
     ## @param global.jwt.existingSecret The name of the existing secret containing the JWT secret
     ##
-    existingSecret: "jwt-secret"
+    existingSecret: "supabase-jwt"
     ## @param global.jwt.existingSecretKey The key in the existing secret containing the JWT secret
     ##
     existingSecretKey: "secret"
