Improves clena script and changes password name

--- a/packages/supabase/chart/templates/supabase-dashboard-secret.yaml
+++ b/packages/supabase/chart/templates/supabase-dashboard-secret.yaml
@@ -1,4 +1,4 @@
-{{- $postgresPassword := randAlphaNum 10 }}
+{{- $dashboardPassword := randAlphaNum 10 }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -6,4 +6,4 @@ metadata:
   namespace: leapfrogai
 type: Opaque
 data:
-  postgres-password: {{ $postgresPassword | b64enc | quote }}
+  password: {{ $dashboardPassword | b64enc | quote }}
