--- a/uds-bundles/dev/gpu/uds-bundle.yaml
+++ b/uds-bundles/dev/gpu/uds-bundle.yaml
@@ -34,3 +34,7 @@ packages:
   - name: lfaiui
     path: ../../../packages/ui/
     ref: dev
+  
+  - name: supabase
+    path: ../../../packages/supabase/
+    ref: dev
